--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <section class="hero">
                 <img src="img/image3.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <img src="img/Logos/LCA.png" class="inicio__hero-info-logo" alt="">
                     <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
                     <h2>LUCES, CÁMARA Y ACCIÓN</h2>
                     <div class="inicio__hero-info-btn">
@@ -53,28 +52,27 @@
             <section class="inicio__enfoque">
                 <div class="container">
                     <h2 class="inicio__enfoque-title">Nuestra Academia</h2>
-                    <p>LUCES CÁMARA Y ACCIÓN LUCES CÁMARA Y ACCIÓN
-                    LUCES CÁMARA Y ACCIÓN CÁMARA Y ACCIÓN LUCES CÁMARA Y ACCIÓN</p>
+                    <p>Somos luces, cámara y acción, una academia dedicada a formar artistas integrales en el mundo de las artes escénicas</p>
                     <div  class="inicio__enfoque-list">
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/medal-award.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Actuación Profesional</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+                                <p>Formación para el escenario, la televisión y el cine</p>
                             </div>
                         </div>
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/ballerina-shoes.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Danza Multidisciplinaria</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+                                <p>Dominio de múltiples estilos de danza, desde clásico a urbano</p>
                             </div>
                         </div>
                         <div class="inicio__enfoque-item">
                             <img src="img/icon/people-community.svg" alt="" class="inicio__enfoque-item-icon">
                             <div class="inicio__enfoque-item-info">
                                 <h3>Comunidad Artística</h3>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+                                <p>Más que una academia somos una familia, fomentamos la colaboración.</p>
                             </div>
                         </div>
                     </div>
@@ -95,14 +93,14 @@
                 <ul class="inicio__faq-list">
                     <li class="inicio__faq-item">
                         <input type="checkbox" id="p1">
-                        <label for="p1" class="inicio__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
+                        <label for="p1" class="inicio__faq-item-title"><h3>¿Qué nivel de experiencia necesito para unirme?</h3></label>
                         <article class="inicio__faq-item-info">
                             <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
                         </article>
                     </li>
                     <li class="inicio__faq-item">
                         <input type="checkbox" id="p2">
-                        <label for="p2" class="inicio__faq-item-title"><h3>¿Puedo adquirir una beca?</h3></label>
+                        <label for="p2" class="inicio__faq-item-title"><h3>¿Ofrecen becas o ayuda financiera?</h3></label>
                         <article class="inicio__faq-item-info">
                             <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
                         </article>
@@ -116,7 +114,7 @@
                     </li>
                     <li class="inicio__faq-item">
                         <input type="checkbox" id="p4">
-                        <label for="p4" class="inicio__faq-item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
+                        <label for="p4" class="inicio__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
                         <article class="inicio__faq-item-info">
                             <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
                         </article>
@@ -130,7 +128,14 @@
                     </li>
                     <li class="inicio__faq-item">
                         <input type="checkbox" id="p6">
-                        <label for="p6" class="inicio__faq-item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
+                        <label for="p6" class="inicio__faq-item-title"><h3>¿Hay límite de edad?</h3></label>
+                        <article class="inicio__faq-item-info">
+                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
+                        </article>
+                    </li>
+                    <li class="inicio__faq-item">
+                        <input type="checkbox" id="p7">
+                        <label for="p7" class="inicio__faq-item-title"><h3>¿Los estudiante participan en presentaciones o eventos?</h3></label>
                         <article class="inicio__faq-item-info">
                             <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
                         </article>
@@ -260,94 +265,6 @@
             </section>   
         </main>
         <footer>
-            <div class="footer">
-                <ul class="footers container">
-                    <li class="footer__div1">
-                        <div class="footer__div1-info">
-                            <img src="img/Logos/LCA.png" alt="logo_lca" class="footer__logo-lca">
-                            <span>Academia de Actuación y Danzas</span>
-                            <h3>Teléfonos</h3>
-                            <span>+58 000 00 00</span>
-                            <h3>Correo</h3>
-                            <span>@academmialca@gmail.com</span>
-                            <h3>Síguenos</h3>
-                            <div class="footer__redes">
-                                <a href=""><img src="img/icon/facebook-svgrepo-com.svg" alt="facebook"></a>
-                                <a href=""><img src="img/icon/instagram-svgrepo-com.svg" alt="instagram"></a>
-                                <a href=""><img src="img/icon/youtube-svgrepo-com.svg" alt="youtube"></a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="footer__div2">
-                        <h3>Menú</h3>
-                        <a href="index.html">Inicio</a>
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="actividades.html">Actividades</a>
-                        <a href="programas.html">Programas</a>
-                        <a href="">Eventos</a>
-                        <a href="">Blog</a>
-                        <a href="#actuacion">Formación en Actuación</a>
-                        <a href="#danza">Formación en Danza</a>
-                        <a href="#teatro">Formación en Teatro</a>
-                    </li>
-                    <li class="footer__div3">
-                        <h3>Visítanos</h3>
-                        <span>Calle 11 con Av. 15 Sector Dr. Baudilio Lara.</span>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </li>
-                    <li class="footer__list-4">
-                        <h3>Desarrolladores</h3>
-                        <div class="footer__list-4-item">
-                            <p class="footer__list-4-item-dev">Jhonny D. Dávila R.</p>
-                            <div class="footer__list-4-item-dev-redes">
-                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="footer__list-4-item">
-                            <p class="footer__list-4-item-dev">Jesús D. Pérez B.</p>
-                            <div class="footer__list-4-item-dev-redes">
-                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="footer__list-4-item">
-                            <p class="footer__list-4-item-dev">Jasneli Rodríguez</p>
-                            <div class="footer__list-4-item-dev-redes">
-                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="footer__list-4-item">
-                            <p class="footer__list-4-item-dev">Beritzon R. Colmenarez</p>
-                            <div class="footer__list-4-item-dev-redes">
-                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="footer__list-4-item">
-                            <p class="footer__list-4-item-dev">Jhosber Gil</p>
-                            <div class="footer__list-4-item-dev-redes">
-                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
-                            </div>
-                        </div>
-                        <p class="uptaeb">Proporcionado por la UPTAEB</p>
-                        <img src="img/Logos/uptaeb.jpg" alt="logo_uptaeb" class="footer__logo-uptaeb">
-                    </li>
-                </ul>
-            </div>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
                     <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
