--- a/clases.html
+++ b/clases.html
@@ -38,60 +38,61 @@
             </div>
         </header>
         <main>
-            <section class="programas__hero">
-            <video src="video/Swan Lake – Dance of the cygnets (The Royal Ballet) - Royal Ballet and Opera (720p, h264).mp4" class="programas__hero-video" autoplay></video>
+            <section class="clases__hero">
+            <video src="video/Swan Lake – Dance of the cygnets (The Royal Ballet) - Royal Ballet and Opera (720p, h264).mp4" class="clases__hero-video" autoplay></video>
             </section>
-            <seccion class="programas__clases">
+
+            <seccion class="clases">
                 <h2>Formación Artística</h2>
-                <div class="programas__clases-list">
-                    <div class="programas__clases-item" class="programas__clases-item-img" id="danza">
-                        <img src="img/danza.jpg" class="programas__clases-item-img" alt="">
-                        <div class="programas__clases-item-info">
+                <div class="clases__list">
+                    <div class="clases__item" class="clases__item-img">
+                        <img src="img/danza.jpg" class="clases__item-img" alt="">
+                        <div class="clases__item-info">
                             <h2>Danza</h2>
                             <p>Nuestras clases de danza se centran en el movimiento, el ritmo y la expresión corporal. Los estudiantes 
                             aprenderán diversas técnicas de baile mientras mejoran su coordinación, disciplina y gracia.</p>
-                            <div class="programas__clases-item-btn">
+                            <div class="clases__item-btn">
                                 <button class="btn-1"><a href="">Contactar</a></button>
                                 <button class="btn-2"><a href="">Requisitos</a></button>
                             </div>
                         </div>
                     </div>
-                    <div class="programas__clases-item" id="teatro">
-                        <div class="programas__clases-item-info">
+                    <div class="clases__item">
+                        <div class="clases__item-info">
                             <h2>Teatro</h2>
                             <p>Enfocado en el arte de la representación, esta formación cubre técnicas de improvisación, expresión de emociones, 
                             dicción y construcción de personajes. Es ideal para quienes desean desarrollar su confianza en el escenario y su capacidad de contar historias</p>
-                            <div class="programas__clases-item-btn">
+                            <div class="clases__item-btn">
                                 <button class="btn-1"><a href="">Contactar</a></button>
                                 <button class="btn-2"><a href="">Requisitos</a></button>
                             </div>
                         </div>
-                        <img src="img/image.png" class="programas__clases-item-img" alt="">
+                        <img src="img/image.png" class="clases__item-img" alt="">
                     </div>
-                    <div class="programas__clases-item" id="actuacion">
-                        <img src="img/image4.jpg" class="programas__clases-item-img" alt="">
-                        <div class="programas__clases-item-info">
+                    <div class="clases__item">
+                        <img src="img/image4.jpg" class="clases__item-img" alt="">
+                        <div class="clases__item-info">
                             <h2>Actuación</h2>
                             <p>Enfocado en las habilidades necesarias para la interpretación en diversos formatos, como el cine, la televisión y el teatro. Los estudiantes 
                             trabajarán en la autenticidad de sus personajes y en la memoria emotiva para una actuación más profunda y creíble.</p>
-                            <div class="programas__clases-item-btn">
+                            <div class="clases__item-btn">
                                 <button class="btn-1"><a href="">Contactar</a></button>
                                 <button class="btn-2"><a href="">Requisitos</a></button>
                             </div>
                         </div>
                     </div>
-                    <div class="programas__clases-item">
-                        <div class="programas__clases-item-info">
+                    <div class="clases__item">
+                        <div class="clases__item-info">
                             <h2>Gimnasia</h2>
                             <p>Las clases de gimnasia combinan fuerza, flexibilidad y gracia. Los 
                             participantes aprenderán rutinas y técnicas que promueven la agilidad, 
                             el control del cuerpo y una postura correcta.</p>
-                            <div class="programas__clases-item-btn">
+                            <div class="clases__item-btn">
                                 <button class="btn-1"><a href="">Contactar</a></button>
                                 <button class="btn-2"><a href="">Requisitos</a></button>
                             </div>
                         </div>
-                        <img src="img/image2.png" class="programas__clases-item-img" alt="">
+                        <img src="img/image2.png" class="clases__item-img" alt="">
                     </div>
                 </div>
             </seccion>
