--- a/contacto.html
+++ b/contacto.html
@@ -32,9 +32,15 @@
             </div>
         </header>
         <main>
-            <section class="contacto__hero">
+            <section class="hero">
+                <img src="img/image6.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Contacto</h2>
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicin
+                    elit. Veritatis hic quidem sint et deleniti in, offci
+                    reiciendis nostrum voluptatum sunt tenetur esse eligd
+                    fugit quis adipisci.</h4>
+                    </div>
                 </div>
             </section>
             <div class="contacto__academia">
@@ -55,8 +61,8 @@
                     </div>
                     <div class="contacto__academia-list">
                         <div class="contacto__academia-title">
-                            <h2>Redes</h2>
-                            <p>Conoce da una vuelta por nuestras redes sociales.</p>
+                            <h2>Redes Sociales</h2>
+                            <p>Realiza una vuelta por nuestras redes sociales.</p>
                         </div>
                         <div class="contacto__academia-item">
                             <div class="contacto__academia-info">
