--- a/nosotros.html
+++ b/nosotros.html
@@ -51,34 +51,33 @@
                             as architecto voluptate numquam ipsskkssksa blanditiis.</p>
                     </div>
             </section>
-            <section class="mvv">
-                <div class="mv container">
-                    <div class="mvv-cre">
+            <section class="nosotros__mvv">
+                <ul class="nosotros__mvv-list container">
+                    <li class="nosotros__mvv-item">
                         <h3>Nuestra Fundadora</h3>
                         <h2 class="mvv-title">Ganesis Niño</h2>
                         <p>fundadora, directora y coordinadora de la Academia de Actuación y Danzas “Luces, Cámara y Acción”. 
                         Artístis profecional con conociminento en diversas áreas culturales como teatro, danza, gimnasia, actuación y canto</p>
-                    </div>
-                    <div class="mvv1">
-                        <ul class="mvv-info">
-                            <li class="mvv-22">
-                                <h2>Misión</h2>
-                                <p>Nuestra misión es ser un centro de formación artística integral que fomenta la creatividad, 
-                                la disciplina y la pasión por las artes escénicas. Ofrecemos una educación de alta calidad en Danza, 
-                                Teatro, Actuación y Gimnasia para estudiantes de todas las edades, desde la niñez hasta la juventud. 
-                                Nos comprometemos a guiar a cada estudiante en su desarrollo personal y artístico, creando 
-                                un ambiente de apoyo donde puedan crecer, expresarse y alcanzar su máximo potencial.</p>
-                            </li>
-                            <li class="mvv-22">
-                                <h2>Visión</h2>
-                                <p>Aspiramos a ser la academia líder en formación artística, reconocida a nivel local y nacional 
-                                por nuestra excelencia pedagógica y por la calidad de nuestros egresados. Buscamos ser un referente 
-                                cultural que inspire a las futuras generaciones de artistas, formando individuos no solo talentosos, 
-                                sino también disciplinados, seguros de sí mismos y con un profundo amor por el arte.</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    </li>
+                    <li class="nosotros__mvv-item">
+                        <img src="img/Asientos-teatro.jpg" class="nosotros__mvv-item-img" alt="">
+                    </li>
+                    <li class="nosotros__mvv-item">
+                        <h2>Misión</h2>
+                        <p>Nuestra misión es ser un centro de formación artística integral que fomenta la creatividad, 
+                        la disciplina y la pasión por las artes escénicas. Ofrecemos una educación de alta calidad en Danza, 
+                        Teatro, Actuación y Gimnasia para estudiantes de todas las edades, desde la niñez hasta la juventud. 
+                        Nos comprometemos a guiar a cada estudiante en su desarrollo personal y artístico, creando 
+                        un ambiente de apoyo donde puedan crecer, expresarse y alcanzar su máximo potencial.</p>
+                    </li>
+                    <li class="nosotros__mvv-item">
+                        <h2>Visión</h2>
+                        <p>Aspiramos a ser la academia líder en formación artística, reconocida a nivel local y nacional 
+                        por nuestra excelencia pedagógica y por la calidad de nuestros egresados. Buscamos ser un referente 
+                        cultural que inspire a las futuras generaciones de artistas, formando individuos no solo talentosos, 
+                        sino también disciplinados, seguros de sí mismos y con un profundo amor por el arte.</p>
+                    </li>
+                </ul>
             </section>
             <section class="nosotros__docentes">
                 <div class="nosotros__docentes-title">
