--- a/contacto.html
+++ b/contacto.html
@@ -32,15 +32,10 @@
             </div>
         </header>
         <main>
-            <section class="hero">
-                <img src="img/image6.jpg" class="hero-img" alt="">
+            <section class="hero contacto__hero">
+                <img src="img/image10.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Contacto</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicin
-                    elit. Veritatis hic quidem sint et deleniti in, offci
-                    reiciendis nostrum voluptatum sunt tenetur esse eligd
-                    fugit quis adipisci.</h4>
-                    </div>
                 </div>
             </section>
             <div class="contacto__academia">
