--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
     <body>
-        <div class="whatsapp">
-            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
-        </div>
-        <div class="scroll">
-            <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
-        </div>
-        <header>
-            <div class="header container" id="e">
-                <input type="checkbox" class="header__checkbox" id="open-menu">
-                <label for="open-menu" class="header__open-nav-button" role="button">=</label>
-                <div class="header__logo">
-                    <a href="index.html" class="header__logo-info"><img src="img/Logos/LCA.png" class="header__logo-img" alt="logo_academmia_lca">Academia LCA</a>
-                </div>
-                <nav class="header__nav" id="e">
-                    <ul class="header__nav-list">
-                        <li class="header__nav-item"><a href="index.html">Inicio</a></li>
-                        <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
-                        <li class="header__nav-item"><a href="programas.html">Programas</a></li>
-                        <li class="header__nav-item"><a href="clases.html">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
-                        <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
         <main>
             <section class="hero">
-                <img src="img/image3.jpg" class="hero-img" alt="">
+                <img src="img/image6.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h1>ACADEMIA DE ACTUACIÓN Y DANZAS</h1>
                     <h2>LUCES, CÁMARA Y ACCIÓN</h2>
-                    <div class="inicio__hero-info-btn">
-                        <button class="btn-1"><a href="">Contactar</a></button>
-                        <button class="btn-2"><a href="">Requisitos</a></button>
-                    </div>
+                <button class="inicio__hero-btn">
+                    <a href="#scroll"><img src="img/icon/arrow-next.svg" class="inicio__hero-icon" alt=""></a>
+                </button>
                 </div>
             </section>
+            <div class="whatsapp">
+            <a href=""><img src="img/icon/whatsapp.svg" alt="whatsapp" class="whatsapp-icon"></a>
+            </div>
+            <div class="scroll">
+                <a href="#top"><img src="img/icon/scroll top.svg" alt="" class="scroll-icon"></a>
+            </div>
+            <header id="scroll">
+                <div class="header container" id="e">
+                    <input type="checkbox" class="header__checkbox" id="open-menu">
+                    <label for="open-menu" class="header__open-nav-button" role="button">=</label>
+                    <div class="header__logo">
+                        <a href="index.html" class="header__logo-info"><img src="img/Logos/LCA.png" class="header__logo-img" alt="logo_academmia_lca">Academia LCA</a>
+                    </div>
+                    <nav class="header__nav" id="e">
+                        <ul class="header__nav-list">
+                            <li class="header__nav-item"><a href="index.html">Inicio</a></li>
+                            <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
+                            <li class="header__nav-item"><a href="programas.html">Programas</a></li>
+                            <li class="header__nav-item"><a href="clases.html">Clases</a></li>
+                            <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                            <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+
             <section class="inicio__enfoque">
                 <div class="container">
-                    <h2 class="inicio__enfoque-title">Nuestra Academia</h2>
+                    <h2 class="inicio__enfoque-title" id="scroll">Nuestra Academia</h2>
                     <p>Somos luces, cámara y acción, una academia dedicada a formar artistas integrales en el mundo de las artes escénicas</p>
                     <div  class="inicio__enfoque-list">
                         <div class="inicio__enfoque-item">
@@ -78,70 +78,6 @@
                     </div>
                 </div>
             </section>
-            <section class="inicio__nosotros">
-                <div class="inicio__nosotros-info container">
-                    <h2>¿QUIENES SOMOS?</h2>
-                    <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
-                    una institución dedicada a la formación artística integral y profesional. 
-                    Desde nuestra fundación, nos hemos comprometido a enriquecer el 
-                    patrimonio cultural de nuestra región, ofreciendo un espacio para el desarrollo del talento.</p>
-                    <button class="btn-1"><a href="nosotros.html">Ver más</a></button>
-                </div>
-            </section>
-            <section class="inicio__faq container">
-                <h2 class="inicio__faq-title">Preguntas Frecuentes</h2>
-                <ul class="inicio__faq-list">
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p1">
-                        <label for="p1" class="inicio__faq-item-title"><h3>¿Qué nivel de experiencia necesito para unirme?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p2">
-                        <label for="p2" class="inicio__faq-item-title"><h3>¿Ofrecen becas o ayuda financiera?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p3">
-                        <label for="p3" class="inicio__faq-item-title"><h3>¿Qué requisitos necesito para inscribirme?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p4">
-                        <label for="p4" class="inicio__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p5">
-                        <label for="p5" class="inicio__faq-item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p6">
-                        <label for="p6" class="inicio__faq-item-title"><h3>¿Hay límite de edad?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="inicio__faq-item">
-                        <input type="checkbox" id="p7">
-                        <label for="p7" class="inicio__faq-item-title"><h3>¿Los estudiante participan en presentaciones o eventos?</h3></label>
-                        <article class="inicio__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                </ul>
-            </section>
             <div class="n">
                 <div class="n-info container">
                     <h3>Contactanos y forma para de nuestra academia y
@@ -156,7 +92,7 @@
         <footer>
             <div class="footer__derechos">
                 <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2023 Todos los derechos reservados.</p>
+                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
                 </div>
             </div>
         </footer>
