--- a/nosotros.html
+++ b/nosotros.html
@@ -37,9 +37,18 @@
                 </nav>
             </div>
         </header>
-        <main> 
+        <main>
+            <section class="inicio__nosotros">
+                <div class="inicio__nosotros-info container">
+                    <h2 class="nosotros__somos-title">¿QUIENES SOMOS?</h2>
+                    <p>Somos la Academia de Actuación y Danzas “Luces, Cámara y Acción”, 
+                    una institución dedicada a la formación artística integral y profesional. 
+                    Desde nuestra fundación, nos hemos comprometido a enriquecer el 
+                    patrimonio cultural de nuestra región, ofreciendo un espacio para el desarrollo del talento.</p>
+                </div>
+            </section>
             <section class="nosotros__historia container">
-                    <img src="img/image2.png" class="nosotros__historia-img" alt="">
+                    <img src="img/image4.jpg" class="nosotros__historia-img" alt="">
                     <div class="nosotros__historia-info">
                         <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -54,13 +63,13 @@
             <section class="nosotros__mvv">
                 <ul class="nosotros__mvv-list container">
                     <li class="nosotros__mvv-item">
-                        <h3>Nuestra Fundadora</h3>
-                        <h2 class="mvv-title">Ganesis Niño</h2>
+                        <h2>Nuestra Fundadora</h2>
+                        <h3 class="mvv-title">Ganesis Niño</h3>
                         <p>fundadora, directora y coordinadora de la Academia de Actuación y Danzas “Luces, Cámara y Acción”. 
                         Artístis profecional con conociminento en diversas áreas culturales como teatro, danza, gimnasia, actuación y canto</p>
                     </li>
                     <li class="nosotros__mvv-item">
-                        <img src="img/Asientos-teatro.jpg" class="nosotros__mvv-item-img" alt="">
+                        <img src="img/image7.jpg" class="nosotros__mvv-item-img" alt="">
                     </li>
                     <li class="nosotros__mvv-item">
                         <h2>Misión</h2>
@@ -85,22 +94,22 @@
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
                         <h3>Juan Pérez</h3>
-                        <img src="img/comentario2.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
                         <h4>Teatro</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Luis Castro</h3>
-                        <img src="img/comentario3.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
                         <h4>Actuación Y Cine</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>Fernanda Gil</h3>
-                        <img src="img/danza.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
                         <h4>Dazna</h4>
                     </div>
                     <div class="nosotros__docentes-item">
                         <h3>María Lopéz</h3>
-                        <img src="img/comentario1.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
+                        <img src="img/image12.jpg" alt="Partenón de Atenas" class="nosotros__docentes-item-img">
                         <h4>Gimnasia</h4>
                     </div>
                 </div>
