--- a/programas.html
+++ b/programas.html
@@ -39,9 +39,9 @@
         </header>
         <main>
             <section class="hero">
-                <img src="img/image5.jpg" class="hero-img" alt="">
+                <img src="img/image13.jpg" class="hero-img" alt="">
                 <div class="hero-info container">
-                    <h2>Programas de Formación</h2>
+                    <h2>Programas Artísticos</h2>
                     <h4>Nuestros programas estan diseñados para acompañar a cada estudiante en su viaje artístico, desde sus primeros pasos hasta alcanzar un nivel profecional.</h4>
                 </div>
             </section>
